Basic search page structure achieved. Needs refining

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 <div id="top-nav-bar">
 
-    <div class="left-top-bar">
+    <div class="top-left-bar">
         <a class="top-nav-link" href="#">About</a>
         <a class="top-nav-link" href="#">Store</a>
     </div>
@@ -40,6 +40,21 @@
     <a class="middle-nav-link" href="#">Google Search</a>
     <a class="middle-nav-link" href="#">I'm Feeling Lucky</a>
 </div>
+
+<div id="bottom-bar">
+    <div class="bottom-left-bar">
+        <a class="bottom-nav-link" href="#">Advertising</a>
+        <a class="bottom-nav-link" href="#">Business</a>
+        <a class="bottom-nav-link" href="#">How Search Works</a>
+    </div>
+
+    <div class="bottom-right-bar">
+        <a class="bottom-nav-link" href="#">Privacy</a>
+        <a class="bottom-nav-link" href="#">Terms</a>
+        <a class="bottom-nav-link" href="#">Settings</a>
+    </div>
+</div>
+
 
 </body>
 
