Search bar still needs icons. App icon needs positioning

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Google Search Page</title>
 </head>
@@ -20,7 +22,9 @@
     <div class="top-right-bar">
         <a class="top-nav-link" href="#">Gmail</a>
         <a class="top-nav-link" href="#">Images</a>
-        <a class="top-nav-link top-nav-square" href="#"><i class="fas fa-th"></i></a>
+        <a class="top-nav-link top-nav-square" href="#"><span class="material-icons">
+            apps
+            </span></a>
         <a class="top-sign-in" href="#">Sign In</a>
     </div>    
 
